# authenticated-pseudonyms

./: Cargo.toml  README.md
benches/: performance.rs
src/: lib.rs  math.rs  pseudonym.rs  unlinkable_pseudonym.rs
src/age/: private.rs  public.rs
src/math/: complex.rs  lagrange_decomposition.rs  mod_exp.rs  quaternion.rs
