[package]
name = "authenticated-pseudonyms"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/SamuelSchlesinger/authenticated-pseudonyms"
license = "Apache-2.0"
keywords = ["cryptography", "credentials", "anonymous", "pseudonymous", "pseudonym", "authentication"]
category = ["cryptography", "authentication"]

[dependencies]
blake3 = "1.5.5"
curve25519-dalek = { version = "4.1.3", features = ["ff", "group"] }
num = { version = "0.4.3", features = ["rand"] }
group = "0.13.0"
rand_chacha = "0.3.1"
rand_core = { version = "0.6.4", features = ["getrandom"] }
rand = "0.8.5"
bls12_381 = "0.8.0"
pairing = "0.23.0"
subtle = "2.6.1"

[features]
default = ["unlinkable_pseudonym"]
full = ["pseudonym", "unlinkable_pseudonym", "public_range", "private_range"]
pseudonym = []
unlinkable_pseudonym = []
public_range = []
private_range = []

[[bench]]
name = "performance"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
